-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b23
/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp: In static member function 'static void ShenandoahBarrierC2Support::verify(RootNode*)':
/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:386:19: error: 'class VectorSet' has no member named 'Reset'; did you mean 'reset'?
386 | visited.Reset();
| ^~~~~
| reset
/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:638:21: error: 'class VectorSet' has no member named 'Reset'; did you mean 'reset'?
638 | visited.Reset();
| ^~~~~
| reset
gmake[3]: *** [lib/CompileJvm.gmk:178: /home/zgu/ws/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahSupport.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [make/Main.gmk:268: hotspot-server-libs] Error 2
/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:386:19: error: 'class VectorSet' has no member named 'Reset'; did you mean 'reset'?
386 | visited.Reset();
| ^~~~~
| reset
/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:638:21: error: 'class VectorSet' has no member named 'Reset'; did you mean 'reset'?
638 | visited.Reset();
| ^~~~~
| reset
gmake[3]: *** [lib/CompileJvm.gmk:178: /home/zgu/ws/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahSupport.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [make/Main.gmk:268: hotspot-server-libs] Error 2
- relates to
-
JDK-8233708 VectorSet cleanup
-
- Resolved
-