8233796: Shenandoah is broken after 8233708

Reviewed-by: rkennke